Project/URL_SHORTENER_ANALYTICS/Kubernetes_config/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: urlshortener-backend
  namespace: urlshortener
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
      - name: backend-container
        image: shettysagar272/urlshortener:Backend-04

        resources:
          requests:
            memory: "128Mi"
            cpu: "200m"
          limits:
            memory: "256Mi"
            cpu: "500m"

        livenessProbe:
          httpGet:
            path: /api
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5   
          failureThreshold: 3 
---
apiVersion: v1
kind: Service
metadata:
  name: urlshortener-backend-service
  namespace: urlshortener

spec:
  type: ClusterIP

  selector:
    app: backend

  ports:
  - name: http
    port: 8000
    targetPort: 8000
