Project/URL_SHORTENER_ANALYTICS/Kubernetes_config/database.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: urlshortner-database
  namespace: urlshortener
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - name: database-container
        image: postgres:16
        volumeMounts:
          - name: urlshortener-storage
            mountPath: /var/lib/postgresql/
      
      volumes:
      - name: urlshortener-storage
        persistentVolumeClaim:
          claimName: urlshortener-pvc



---

apiVersion: v1
kind: Service
metadata:
  name: database-service
  namespace: urlshortener
spec:
  selector:
    app: database
  ports:
  - name: http
    port: 5432
    targetPort: 5432
  type: ClusterIP
