Project/URL_SHORTENER_ANALYTICS/Kubernetes_config/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: urlshortener-frontend
  namespace: urlshortener
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend-container
        image: shettysagar272/urlshortener:Frontend-06


---

apiVersion: v1
kind: Service
metadata:
  name: urlshortener-frontend-service
  namespace: urlshortener
spec:
  selector:
    app: frontend
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
