Project/URL_SHORTENER_ANALYTICS/Kubernetes_config/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database-StatefulSet
  namespace: urlshortener
spec:
  serviceName: database-service
  replicas: 2
  selector:
    matchLabels:
      app: database

  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database-container
          image: postgres:15
          ports:
            - containerPort: 5432
          
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"

          livenessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 30
            periodSeconds: 5

          readinessProbe:     # Advance Concept to check data base is live
            exec:
              command:
                - pg_isready
                - -U
                - url
            initialDelaySeconds: 10
            periodSeconds: 5

          volumeMounts:
            - name: database-data   # ✅ match below
              mountPath: /var/lib/postgresql/   # ✅ correct path

  volumeClaimTemplates:
    - metadata:
        name: database-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi

---

apiVersion: v1
kind: Service
metadata:
  name: database-service
  namespace: urlshortener
spec:
  clusterIP: None   # 🔥 Headless service
  selector:
    app: database
  ports:
    - port: 5432
