Project/URL_SHORTENER_ANALYTICS/Kubernetes_config/bckend-ingress.yml
# backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: urlshortener-backend-ingress
  namespace: urlshortener
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: urlshortener.local
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: urlshortener-backend-service
            port:
              number: 8000
